# guinsoodb

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GuinsooDBConfig.cmake.in  GuinsooDBConfigVersion.cmake.in  LICENSE  Makefile  README.md
benchmark/micro/: CMakeLists.txt  append.cpp  bulkupdate.cpp  cast.cpp  data_skipping.cpp  in.cpp  storage.cpp
src/: CMakeLists.txt  README.md
src/catalog/: CMakeLists.txt  catalog.cpp  catalog_entry.cpp  catalog_set.cpp  dependency_manager.cpp
src/catalog/catalog_entry/: CMakeLists.txt  copy_function_catalog_entry.cpp  index_catalog_entry.cpp  macro_catalog_entry.cpp  pragma_function_catalog_entry.cpp  schema_catalog_entry.cpp  sequence_catalog_entry.cpp  table_catalog_entry.cpp  table_function_catalog_entry.cpp  view_catalog_entry.cpp
src/catalog/default/: CMakeLists.txt  default_functions.cpp  default_schemas.cpp  default_views.cpp
src/common/: CMakeLists.txt  assert.cpp  bit_operations.cpp  checksum.cpp  constants.cpp  cycle_counter.cpp  exception.cpp  exception_format_value.cpp  file_buffer.cpp  file_system.cpp  fstream_util.cpp  gzip_stream.cpp  limits.cpp  printer.cpp  progress_bar.cpp  serializer.cpp  string_util.cpp  symbols.cpp  tree_renderer.cpp  types.cpp
src/common/crypto/: CMakeLists.txt  md5.cpp
src/common/enums/: CMakeLists.txt  catalog_type.cpp  expression_type.cpp  join_type.cpp  logical_operator_type.cpp  physical_operator_type.cpp  relation_type.cpp  statement_type.cpp
src/common/operator/: CMakeLists.txt  cast_operators.cpp
src/common/serializer/: CMakeLists.txt  buffered_deserializer.cpp  buffered_file_reader.cpp  buffered_file_writer.cpp  buffered_serializer.cpp
src/common/types/: CMakeLists.txt  blob.cpp  cast_helpers.cpp  chunk_collection.cpp  data_chunk.cpp  date.cpp  decimal.cpp  hash.cpp  hugeint.cpp  hyperloglog.cpp  interval.cpp  null_value.cpp  row_chunk.cpp  selection_vector.cpp  string_heap.cpp  string_type.cpp  time.cpp  timestamp.cpp  validity_mask.cpp  value.cpp  vector.cpp  vector_buffer.cpp  vector_constants.cpp
src/common/value_operations/: CMakeLists.txt  comparison_operations.cpp  hash.cpp  numeric_operations.cpp
src/common/vector_operations/: CMakeLists.txt  boolean_operators.cpp  comparison_operators.cpp  gather.cpp  generators.cpp  is_distinct_from.cpp  null_operations.cpp  numeric_inplace_operators.cpp  vector_cast.cpp  vector_copy.cpp  vector_hash.cpp  vector_storage.cpp
src/execution/: CMakeLists.txt  adaptive_filter.cpp  aggregate_hashtable.cpp  base_aggregate_hashtable.cpp  column_binding_resolver.cpp  expression_executor.cpp  expression_executor_state.cpp  join_hashtable.cpp  partitionable_hashtable.cpp  perfect_aggregate_hashtable.cpp  physical_operator.cpp  physical_plan_generator.cpp  reservoir_sample.cpp  window_segment_tree.cpp
src/execution/expression_executor/: CMakeLists.txt  execute_between.cpp  execute_case.cpp  execute_cast.cpp  execute_comparison.cpp  execute_conjunction.cpp  execute_constant.cpp  execute_function.cpp  execute_operator.cpp  execute_parameter.cpp  execute_reference.cpp
src/execution/merge_join/: CMakeLists.txt  merge_join.cpp  merge_join_complex.cpp  merge_join_simple.cpp
src/execution/nested_loop_join/: CMakeLists.txt  nested_loop_join_inner.cpp  nested_loop_join_mark.cpp
src/execution/physical_plan/: CMakeLists.txt  plan_aggregate.cpp  plan_any_join.cpp  plan_chunk_get.cpp  plan_comparison_join.cpp  plan_copy_to_file.cpp  plan_create.cpp  plan_create_index.cpp  plan_create_table.cpp  plan_cross_product.cpp  plan_delete.cpp  plan_delim_get.cpp  plan_delim_join.cpp  plan_distinct.cpp  plan_dummy_scan.cpp  plan_empty_result.cpp  plan_execute.cpp  plan_explain.cpp  plan_export.cpp  plan_expression_get.cpp  plan_filter.cpp  plan_get.cpp  plan_insert.cpp  plan_limit.cpp  plan_order.cpp  plan_pragma.cpp  plan_prepare.cpp  plan_projection.cpp  plan_recursive_cte.cpp  plan_sample.cpp  plan_set.cpp  plan_set_operation.cpp  (+6 more)
src/function/: CMakeLists.txt  cast_rules.cpp  function.cpp  macro_function.cpp  pragma_function.cpp  udf_function.cpp
src/include/: duckdb.h  duckdb.hpp
src/main/: CMakeLists.txt  appender.cpp  client_context.cpp  connection.cpp  database.cpp  duckdb-c.cpp  materialized_query_result.cpp  prepared_statement.cpp  prepared_statement_data.cpp  query_profiler.cpp  query_result.cpp  relation.cpp  stream_query_result.cpp
src/optimizer/: CMakeLists.txt  column_lifetime_analyzer.cpp  common_aggregate_optimizer.cpp  cse_optimizer.cpp  deliminator.cpp  expression_heuristics.cpp  expression_rewriter.cpp  filter_combiner.cpp  filter_pullup.cpp  filter_pushdown.cpp  in_clause_rewriter.cpp  join_order_optimizer.cpp  optimizer.cpp  regex_range_filter.cpp  remove_unused_columns.cpp  statistics_propagator.cpp  topn_optimizer.cpp
src/parallel/: CMakeLists.txt  executor.cpp  pipeline.cpp  task_scheduler.cpp  thread_context.cpp
src/parser/: CMakeLists.txt  base_expression.cpp  column_definition.cpp  constraint.cpp  expression_util.cpp  keyword_helper.cpp  parsed_expression.cpp  parsed_expression_iterator.cpp  parser.cpp  query_error_context.cpp  query_node.cpp  result_modifier.cpp  tableref.cpp  transformer.cpp
src/planner/: CMakeLists.txt  bind_context.cpp  binder.cpp  expression.cpp  expression_binder.cpp  expression_iterator.cpp  joinside.cpp  logical_operator.cpp  logical_operator_visitor.cpp  planner.cpp  pragma_handler.cpp  table_binding.cpp
src/storage/: CMakeLists.txt  block.cpp  buffer_manager.cpp  checkpoint_manager.cpp  column_data.cpp  data_table.cpp  index.cpp  local_storage.cpp  meta_block_reader.cpp  meta_block_writer.cpp  numeric_segment.cpp  single_file_block_manager.cpp  storage_info.cpp  storage_lock.cpp  storage_manager.cpp  string_segment.cpp  uncompressed_segment.cpp  wal_replay.cpp  write_ahead_log.cpp
src/transaction/: CMakeLists.txt  cleanup_state.cpp  commit_state.cpp  rollback_state.cpp  transaction.cpp  transaction_context.cpp  transaction_manager.cpp  undo_buffer.cpp
tools/jdbc/: CMakeCache.txt  CMakeLists.txt
tools/rest/: CMakeLists.txt  server.cpp  test_the_rest.py
(+1465 files in other folders)
